src/main/java/com/example/loginapp/_core/error/ex/Exception404.java
package com.example.loginapp._core.error.ex;

public class Exception404 extends RuntimeException {
    public Exception404(String message) {
        super(message);
    }
}
